<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Братки ТД</string>

    <string name="menu">Меню</string>
    <string name="build_tower">Build</string>
    <string name="next_wave">Следующая</string>
    <string name="var_speed" translatable="false">%1$dx</string>
    <string name="fast_forward" translatable="false">\>\></string>

    <string name="restart">Рестарт</string>
    <string name="save_game">Сохранить</string>
    <string name="game_saved">Сохранено!</string>
    <string name="load_game">Загрузить</string>
    <string name="change_map">Сменить карту</string>
    <string name="settings">Настройки</string>

    <string name="delete">Удалить</string>

    <string name="sound">Звук</string>
    <string name="theme">Тема</string>
    <string name="change_theme">Сменить тему</string>
    <string name="change_theme_warning">Игра перезапустится</string>
    <string name="back_button_mode">Закрытие кнопкой Назад</string>
    <string name="reset_highscores">Сбросить рекорды</string>
    <string name="reset_highscores_warning">Точно?</string>
    <string name="start_tutorial">нахуй иди</string>
    <string name="start_tutorial_warning">нахуй иди</string>
    <string name="transparent_menus">Прозрачные меню</string>

    <string name="game_over">Игра окончена!</string>
    <string name="score">Очки</string>

    <string name="credits">Деньги</string>
    <string name="lives">ХП</string>
    <string name="wave">Волна</string>
    <string name="bonus">Бонус</string>

    <string name="level">Уровень</string>
    <string name="damage">Урон</string>
    <string name="reload">Перезарядка</string>
    <string name="range">Радиус</string>
    <string name="splash">Радиус взрыва</string>
    <string name="distance">Расстояние</string>
    <string name="intensity">Сила</string>
    <string name="duration">Длительность</string>
    <string name="inflicted">Нанесено урона</string>
    <string name="dps">ДПС</string>

    <string name="lock_target">Захват цели</string>
    <string name="strategy">Поведение</string>
    <string name="enhance">Улучшить</string>
    <string name="upgrade">Апгрейд</string>
    <string name="sell">Продать</string>

    <string name="on">Вкл</string>
    <string name="off">Выкл</string>
    <string name="twice">Twice</string>

    <string name="strategy_closest">Ближайший</string>
    <string name="strategy_weakest">Слабейший</string>
    <string name="strategy_strongest">Сильнейший</string>
    <string name="strategy_first">Первый</string>
    <string name="strategy_last">Последний</string>

    <string name="theme_original">Оригинальная</string>
    <string name="theme_dark">Тёмная</string>
    <string name="theme_colour">Цветная</string>

    <string name="map_original_name">The Original</string>
    <string name="map_waiting_line_name">I hate waiting lines</string>
    <string name="map_turn_round_name">Turn a round</string>
    <string name="map_hurry_name">We\'re in a hurry!</string>
    <string name="map_civyshk_2y_name">Civyshk 2Y</string>
    <string name="map_civyshk_line5_name">Civyshk Line5</string>
    <string name="map_civyshk_labyrinth_name">Civyshk Labyrinth</string>
    <string name="map_civyshk_yard_name">Civyshk Yard</string>
    <string name="map_higgledy_piggledy_name">Higgledy Piggledy</string>
    <string name="map_big_u_name">Big U</string>
    <string name="map_cloverleaf_name">Cloverleaf</string>
    <string name="map_roundabout_name">Roundabout</string>
    <string name="map_runway_name">Runway</string>
    <string name="map_wtf_name">WTF?</string>
    <string name="map_turn_left_name">Turn Left</string>
    <string name="map_turn_right_name">Turn Right</string>
    <string name="map_oddball_name">Oddball</string>
    <string name="map_spiral1_name">Spiral v1</string>
    <string name="map_chaos_name">Chaos</string>
    <string name="map_moar_chaos_name">Moar Chaos</string>
    <string name="map_spiral2_name">Spiral v2</string>
    <string name="map_nou_name">No, U</string>
    <string name="map_highscore_name">Highscore!</string>
    <string name="press_back_button_again_toast">Press back button again to exit</string>

    <string name="tutorial">Getting Started</string>
    <string name="got_it">Got It!</string>
    <string name="skip_tutorial">Skip Tutorial</string>

    <string name="enemy_stats">Враги</string>
    <string name="name">"Имя : "</string>
    <string name="health">ХП :</string>
    <string name="speed">Скорость :</string>
    <string name="reward">Награда :</string>
    <string name="weak_against">Слаб против :</string>
    <string name="strong_against">Силён против :</string>
    <string name="none">Ничего</string>
    <string name="Laser">Лазер</string>
    <string name="Bullet">Пули</string>
    <string name="Glue">Клей</string>
    <string name="Explosive">Взрыв</string>
    <string name="enemy_soldier">Квадрат</string>
    <string name="enemy_blob">Круг</string>
    <string name="enemy_sprinter">Треугольник</string>
    <string name="enemy_flyer">Трапеция</string>
    <string name="enemy_healer">Звезда</string>
    <string name="explosive">Взрыв</string>
    <string name="glue">Клей</string>
    <string name="bullet">Пули</string>
    <string name="laser">Лазер</string>
</resources>
