<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"

    android:title="@string/settings">
    <!--android:icon="@drawable/settings"-->
    <ListPreference
        android:key="theme_index"
        android:defaultValue="0"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_entry_values"
        android:title="@string/theme" />
    <SwitchPreference
        android:key="sound_enabled"
        android:defaultValue="true"
        android:title="@string/sound" />
    <SwitchPreference
        android:key="transparent_menus_enabled"
        android:defaultValue="false"
        android:title="@string/transparent_menus" />
    <Preference
        android:key="reset_highscores"
        android:title="@string/reset_highscores" />
</PreferenceScreen>
